--- a/themes/volantis/layout/_partial/footer.ejs
+++ b/themes/volantis/layout/_partial/footer.ejs
@@ -22,9 +22,9 @@
           <%})%>
         </div>
       <% } else if (item == 'aplayer') { %>
-        <!-- <div class="aplayer-container">
+        <div class="aplayer-container">
           <%- partial('../_third-party/aplayer', {post: null, where: 'footer'}) %>
-        </div> -->
+        </div>
       <% } else if (item == 'license') { %>
         <div><%- markdown(__('footer.license')) %></div>
       <% } else if (item == 'info') { %>
